--- a/directives/directive.html
+++ b/directives/directive.html
@@ -5,6 +5,6 @@
       <script src="directive_ex.js"></script>
     </head>
   <body ng-app="functionalities">
-    <div entering leaving>Hover over me for things....(but open your console)</div>
+    <div entering="activeClass" leaving>Hover over me for things....(but open your console)</div>
   </body>
 </html>
