--- a/directives/directive.html
+++ b/directives/directive.html
@@ -4,7 +4,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.5/angular.min.js"></script>
       <script src="directive_ex.js"></script>
     </head>
-  <body ng-app="functionalities">
-    <div entering="activeClass" leaving>Hover over me for things....(but open your console)</div>
+  <body ng-app="functionalities" ng-controller="exampleCtrl as example">
+    <div entering>Hover over me for the things.....(open your console)</div>
   </body>
 </html>
