scope and more complex directives

--- a/directives/directive.html
+++ b/directives/directive.html
@@ -5,6 +5,6 @@
       <script src="directive_ex.js"></script>
     </head>
   <body ng-app="functionalities" ng-controller="exampleCtrl as example">
-    <div entering>Hover over me for the things.....(open your console)</div>
+    <welcome hello howdy hi>Hover over me for the things.....(open your console)</welcome>
   </body>
 </html>
